[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.ropeproject
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.poetry]
name = "wb2k"
version = "0.3.0"
description = "Welcome new folks to a Slack channel."
authors = ["Reilly Tucker Siemens <reilly@tuckersiemens.com>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/reillysiemens/wb2k"
keywords = ["welcome", "bot", "Slack"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only"
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
slackclient = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.7"
mypy = "^0.710.0"
flake8 = "^3.7"
tox = "^3.12"
black = "^19.3b0"

[tool.poetry.scripts]
wb2k = "wb2k:cli"

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.12.0
skipsdist = true
skip_missing_interpreters = true
envlist = py37, py38

[testenv]
whitelist_externals = poetry
skip_install = true
commands =
    poetry install --verbose
    poetry run black --verbose --check wb2k.py tests
    poetry run flake8 --ignore=E501 --max-complexity=12 wb2k.py tests/
    poetry run mypy \
        --ignore-missing-imports \
        --disallow-untyped-defs \
        wb2k.py
    poetry run pytest \
        --verbose \
        --cov=wb2k \
        --cov-report=term-missing \
        --cov-fail-under=90 \
        --cov-branch \
        {posargs}
"""

[build-system]
requires = ["poetry>=1.0.0a4"]
build-backend = "poetry.masonry.api"
